--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://albert200024.github.io/React-Post",
   "name": "task1",
   "version": "0.1.0",
   "private": true,
@@ -14,6 +15,9 @@
   },
   "scripts": {
     "dev": "concurrently \"npm run server\" \"npm start\"",
+    "predeploy": "npm run build",
+    "deploy": "npm run json-server && npm run build && gh-pages -d build",
+    "json-server": "json-server --watch server/db.json --port 3300",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
